# CrySPY

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cryspy.py  cspy.py  pyproject.toml
CSPY/: __init__.py
CSPY/BO/: BO_init.py  combo_cspy.py  select_descriptor.py
CSPY/IO/: __init__.py  out_results.py  pkl_data.py  read_input.py
CSPY/calc_dscrpt/: __init__.py
CSPY/f-fingerprint/: Makefile  constant.f90
CSPY/gen_struc/: __init__.py
CSPY/interface/: select_code.py
CSPY/job/: __init__.py  ctrl_job.py
CSPY/start/: __init__.py  cspy_init.py  cspy_restart.py  utility.py
CrySPY/: utility.py
CrySPY/BO/: BO_init.py  BO_restart.py  __init__.py  bo_init.py  bo_next_gen.py  bo_next_select.py  bo_restart.py  combo_cryspy.py  select_descriptor.py
CrySPY/EA/: ea_append.py  ea_child.py  ea_init.py  ea_next_gen.py
CrySPY/IO/: io_stat.py  out_kpts.py  out_results.py  out_struc.py  pkl_data.py  read_input.py
CrySPY/LAQA/: LAQA_init.py  LAQA_restart.py  calc_score.py  laqa_init.py  laqa_next_selection.py  laqa_restart.py
CrySPY/RS/: rs_init.py  rs_restart.py
CrySPY/calc_dscrpt/: __init__.py
CrySPY/f-fingerprint/: Readme  cal_fingerprint.f90  convolute.f90  findinv.f90  precmod.f90  stringmod.f90
CrySPY/gen_struc/: __init__.py  struc_util.py
CrySPY/interface/: __init__.py  select_code.py
CrySPY/job/: ctrl_ext.py  ctrl_job.py
CrySPY/start/: __init__.py  cryspy_init.py  cryspy_restart.py  utility.py
docs/: .buildinfo  about.html  data_format.html  faq.html  genindex.html  index.html  input_file.html  installation.html  objects.inv  search.html  searchindex.js  tips.html  tutorial.html  utility.html
docs/_sources/: about.rst.txt  data_format.rst.txt  faq.rst.txt  index.rst.txt  input_file.rst.txt  installation.rst.txt  tips.rst.txt  tutorial.rst.txt  utility.rst.txt
docs/_static/: documentation_options.js
example/0.3.0_QE_RS_Si8_asahi/: cryspy.in  cryspy.out  cryspy.sh  cryspy.stat  log
example/0.3.0_VASP_RS_Si8_asahi/: cryspy.in  cryspy.out  cryspy.stat  log
example/LAMMPS_RS_Si16/: cryspy.in
example/LAMMPS_bash_RS_Si16/: cryspy.in
example/LAMMPS_bash_Si16_lj_RS/: cryspy.in
example/OMX_sekirei_RS_Si16/: cryspy.in
example/QE_Li3PS4_2fu_RS_mol/: cryspy.in
example/QE_Li3PS4_2fu_RS_mol_bs/: PS4.xyz  cryspy.in
example/QE_RS_Si8/: cryspy.in
example/QE_RS_Si8_sekirei/: cspy.in  cspy.out  cspy.stat  log
example/QE_Si8_RS/: cryspy.in
example/QE_benzene_2_RS_mol/: README
example/RS_Si8_sekirei/: cspy.stat  log
example/VASP_RS_Si8/: cryspy.in
utility/: cryspy_analyzer_BO.ipynb  cryspy_analyzer_BO_and_EA.ipynb  cryspy_analyzer_EA.ipynb  cryspy_analyzer_LAQA.ipynb  cryspy_analyzer_RS.ipynb  cspy_analyzer_BO.ipynb  cspy_analyzer_RS.ipynb  kpt_check.py  pkl_data.ipynb  qe2vasp_cif.py  spg_check.py  struc2cif.py
(+511 files in other folders)
