[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "csp-cryspy"
authors = [
    {name = "Tomoki Yamashita", email = "yamashita06@vos.nagaokaut.ac.jp"},
]
maintainers = [
    {name = "Tomoki Yamashita", email = "yamashita06@vos.nagaokaut.ac.jp"}
]
description = "CrySPY is a crystal structure prediction tool written in Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["CSP"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyxtal>=1.0.7",
]
dynamic = ["version"]

[project.urls]
documentation = "https://tomoki-yamashita.github.io/CrySPY_doc"
repository = "https://github.com/Tomoki-YAMASHITA/CrySPY.git"
changelog = "https://github.com/Tomoki-YAMASHITA/CrySPY/blob/master/CHANGELOG.md"

[project.scripts]
"cryspy" = "cryspy.scripts.cryspy:main"
"cryspy-ht" = "cryspy.scripts.cryspy_ht:main"
"cryspy-ht-status" = "cryspy.scripts.cryspy_ht_status:main"
"cryspy-ht-results" = "cryspy.scripts.cryspy_ht_results:main"
"cryspy-ht-ea-data" = "cryspy.scripts.cryspy_ht_ea_data:main"
"cryspy-ht-reset" = "cryspy.scripts.cryspy_ht_reset:main"
"cryspy-ht-extract-struc" = "cryspy.scripts.cryspy_ht_extract_struc:main"
"cryspy-Eplot" = "cryspy.scripts.cryspy_Eplot:main"
"cryspy-calc-convex-hull" = "cryspy.scripts.cryspy_calc_convex_hull:main"
"cryspy-skip" = "cryspy.scripts.cryspy_skip:main"
"cryspy-print" = "cryspy.scripts.cryspy_print:main"
"cryspy-extract-struc" = "cryspy.scripts.cryspy_extract_struc:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "cryspy.__version__"}

